--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print details
-        run: "echo ${{ toJSON(github) }}"
+        run: echo "${{ toJSON(github) }}"
